# reif

./: .gitignore  CMakeLists.txt  README.md  build.bat
res/shaders/: model_fragment.glsl  model_vertex.glsl  text_fragment.glsl  text_vertex.glsl  vertex.glsl
src/: config.h  main.cpp
src/assets/: font.cpp  font.h  spritesheet.cpp  spritesheet.h
src/graphics/: font.h  window.cpp  window.h
src/renderer/: window.cpp
